[package]
name = "new_spt"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.5"
rspotify = { version = "0.13.2", default-features = false, features = ["client-ureq", "ureq-rustls-tls", "cli", "env-file"] }
tokio = { version = "1.39.2", features = ["sync", "macros", "rt", "rt-multi-thread"] }
