[package]
name = "new_spt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
rspotify = { version = "0.13.2", default-features = false, features = ["client-ureq", "ureq-rustls-tls", "cli", "env-file"] }
simplelog = "0.12.2"
tokio = { version = "1.39.2", features = ["sync", "macros", "rt", "rt-multi-thread"] }
